src2/objects/NES_StagingTableEventLog__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NES_StagingTableEventLogs</relationshipLabel>
        <relationshipName>NES_StagingTableEventLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capsule_ID__c</fullName>
        <label>Capsule ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractLineItemChassisMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Mirror Chassis</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>NES_StagingTableEventLogs (Contract Line Item Mirror Chassis)</relationshipLabel>
        <relationshipName>NES_StagingTableEventLogs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractLineItemModuleMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Module Mirror</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>NES_StagingTableEventLogs (Contract Line Item Module Mirror)</relationshipLabel>
        <relationshipName>NES_StagingTableEventLogs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Line_Item_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Module</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>NES_StagingTableEventLogs (Contract Line Item Module)</relationshipLabel>
        <relationshipName>NES_StagingTableEventLogs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DailyAggregated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DailyAggregated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extraction_Counter__c</fullName>
        <label>Extraction Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IoT_Asset_Serial_Number__c</fullName>
        <label>IoT Asset Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Iot_Message_UUID__c</fullName>
        <label>Iot Message UUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Timestamp__c</fullName>
        <label>Message Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NES_Asset_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Module</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>NES_StagingTableEventLogs (Asset Module)</relationshipLabel>
        <relationshipName>NES_StagingTableEventLogs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Chassis</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>NES_StagingTableEventLogs</relationshipLabel>
        <relationshipName>NES_StagingTableEventLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_BrewingStoppedByConsumer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brewing Stopped by Consumer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_CapsuleName__c</fullName>
        <label>Capsule Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CapsuleName</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_ContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Chassis</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>NES_StagingTableEventLogs</relationshipLabel>
        <relationshipName>NES_StagingTableEventLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Count__c</fullName>
        <label>Consumption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_End_Temperature__c</fullName>
        <label>End Temperature</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_EventCode__c</fullName>
        <label>Event Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_EventDate__c</fullName>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NES_EventDescription__c</fullName>
        <label>Issue Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_EventName__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EventName</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_EventNumber__c</fullName>
        <label>Issue Number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_EventSummary__c</fullName>
        <label>Event Summary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EventSummary</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_EventUrgency__c</fullName>
        <label>Event Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_Event_Severity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_HotWaterQuantity__c</fullName>
        <label>Brewing End Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_IoT_Market__c</fullName>
        <label>IoT Market</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_IoT_Message_Type__c</fullName>
        <label>IoT Message Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_IoT_Module_Serial_Number__c</fullName>
        <label>IoT Module Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_IsSummary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_JsonMessage__c</fullName>
        <label>Json Message</label>
        <length>20480</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NES_NotableEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notable Event</label>
        <referenceTo>NES_NotableEvent__c</referenceTo>
        <relationshipLabel>NES_StagingTableEventLogs</relationshipLabel>
        <relationshipName>NES_StagingTableEventLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_RecipeTypeRecipeID__c</fullName>
        <label>Recipe Type / Recipe ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Recipe__c</fullName>
        <label>Recipe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Recipe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_StartTemperature__c</fullName>
        <label>Start Temperature</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_TopUpCoffeeVolume__c</fullName>
        <label>Top-up Coffee Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_TotalWaterQuantityThroughCapsule__c</fullName>
        <label>Brewing Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Timestamp__c</fullName>
        <label>New Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operational_Value__c</fullName>
        <label>Operational Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Halted</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
                <value>
                    <fullName>Ok</fullName>
                </value>
                <value>
                    <fullName>Reset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reset_Event__c</fullName>
        <label>Reset Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Timestamp__c</fullName>
        <label>Reset Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Setting_Code__c</fullName>
        <label>Setting Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setting_Name__c</fullName>
        <label>Setting Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCaps12months__c</fullName>
        <label>Total Caps 12 months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMilk__c</fullName>
        <label>Total Milk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNespressoCaps12months__c</fullName>
        <label>Total Nespresso Caps 12 months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalQuantityOfWaterForBrews12Month__c</fullName>
        <label>Total Water Brews 12 months (L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalQuantityofWaterforBrews12months__c</fullName>
        <label>Total Water 12 months (L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalQuantityofWateronlyBrews__c</fullName>
        <label>Total Water Brews (L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalWaterLitres__c</fullName>
        <label>Total Water (L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnrecognizedCaps__c</fullName>
        <label>Unrecognized Caps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NES_StagingTableEventLog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UniqueKey__c</columns>
        <columns>NES_EventName__c</columns>
        <columns>Iot_Message_UUID__c</columns>
        <columns>IoT_Asset_Serial_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>myview</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UniqueKey__c</columns>
        <columns>NES_EventName__c</columns>
        <columns>Iot_Message_UUID__c</columns>
        <columns>IoT_Asset_Serial_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IoT_Asset_Serial_Number__c</field>
            <operation>equals</operation>
            <value>TESTX231XXXXXX1NXXM</value>
        </filters>
        <label>myview</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>NES_StagingTableEventLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NES_StagingTableEventLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>